--- a/gridot/GriDot/Base.lproj/Main.storyboard
+++ b/gridot/GriDot/Base.lproj/Main.storyboard
@@ -805,7 +805,7 @@
                                                         <rect key="frame" x="6" y="61" width="41.666666666666664" height="40.666666666666657"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ellipsis" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ljK-qh-Qqe">
-                                                                <rect key="frame" x="7.0000000000000018" y="13.999999999999993" width="27.666666666666671" height="13"/>
+                                                                <rect key="frame" x="7.0000000000000018" y="13.999999999999996" width="27.666666666666671" height="12.999999999999996"/>
                                                                 <color key="tintColor" name="Icon"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" secondItem="ljK-qh-Qqe" secondAttribute="height" multiplier="1:1" id="23B-a3-fMZ"/>
@@ -1412,7 +1412,6 @@
         <!--Main Tab Bar Controller-->
         <scene sceneID="YxS-dJ-QuB">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Row-dJ-nNO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController storyboardIdentifier="MainTabBarController" id="UOM-Zj-RAt" customClass="MainTabBarController" customModule="GriDot" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="YG0-ry-b7Z">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
@@ -1427,6 +1426,7 @@
                         <segue destination="7dH-hQ-Yp4" kind="relationship" relationship="viewControllers" id="8PZ-He-A8D"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Row-dJ-nNO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="748" y="967"/>
         </scene>
@@ -1479,15 +1479,15 @@
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <subviews>
                                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P3z-fn-L5d">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="90" height="86"/>
+                                                                                <rect key="frame" x="3" y="3" width="84" height="80"/>
                                                                                 <color key="backgroundColor" name="Color3"/>
                                                                             </imageView>
                                                                         </subviews>
                                                                         <constraints>
-                                                                            <constraint firstAttribute="bottom" secondItem="P3z-fn-L5d" secondAttribute="bottom" id="Wau-C0-ZU2"/>
-                                                                            <constraint firstAttribute="trailing" secondItem="P3z-fn-L5d" secondAttribute="trailing" id="pjv-xI-Kme"/>
-                                                                            <constraint firstItem="P3z-fn-L5d" firstAttribute="leading" secondItem="zQu-Dc-ALQ" secondAttribute="leading" id="z4K-xh-u7C"/>
-                                                                            <constraint firstItem="P3z-fn-L5d" firstAttribute="top" secondItem="zQu-Dc-ALQ" secondAttribute="top" id="zUS-lC-DRN"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="P3z-fn-L5d" secondAttribute="bottom" constant="3" id="Wau-C0-ZU2"/>
+                                                                            <constraint firstAttribute="trailing" secondItem="P3z-fn-L5d" secondAttribute="trailing" constant="3" id="pjv-xI-Kme"/>
+                                                                            <constraint firstItem="P3z-fn-L5d" firstAttribute="leading" secondItem="zQu-Dc-ALQ" secondAttribute="leading" constant="3" id="z4K-xh-u7C"/>
+                                                                            <constraint firstItem="P3z-fn-L5d" firstAttribute="top" secondItem="zQu-Dc-ALQ" secondAttribute="top" constant="3" id="zUS-lC-DRN"/>
                                                                         </constraints>
                                                                     </collectionViewCellContentView>
                                                                     <size key="customSize" width="90" height="86"/>
