--- a/gridot/GriDot/Base.lproj/Main.storyboard
+++ b/gridot/GriDot/Base.lproj/Main.storyboard
@@ -781,7 +781,7 @@
                                                                 <rect key="frame" x="6" y="61" width="42" height="40.666666666666657"/>
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ellipsis" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ljK-qh-Qqe">
-                                                                        <rect key="frame" x="7" y="13.999999999999995" width="28" height="13.000000000000012"/>
+                                                                        <rect key="frame" x="7" y="13.999999999999996" width="28" height="12.999999999999996"/>
                                                                         <color key="tintColor" name="Icon"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" secondItem="ljK-qh-Qqe" secondAttribute="height" multiplier="1:1" id="23B-a3-fMZ"/>
@@ -993,6 +993,7 @@
                         <outlet property="panelWidthContraint" destination="Se7-Tb-wme" id="6hI-Eb-m01"/>
                         <outlet property="sideButtonView" destination="e3T-vB-NFk" id="UI3-2L-JH4"/>
                         <outlet property="sideButtonViewGroup" destination="Ssr-I8-Hai" id="Q3z-5A-K6y"/>
+                        <outlet property="superView" destination="1i6-r2-fWd" id="zVq-ND-0nr"/>
                         <outlet property="topSideBtn" destination="gzA-AT-0Nb" id="ZZr-Uw-Aj4"/>
                         <outlet property="topSideBtnImage" destination="pkP-83-s86" id="7GE-At-hUB"/>
                     </connections>
