--- a/gridot/GriDot/Base.lproj/Main.storyboard
+++ b/gridot/GriDot/Base.lproj/Main.storyboard
@@ -1002,6 +1002,25 @@
             </objects>
             <point key="canvasLocation" x="744.61538461538464" y="1756.6350710900474"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="DMa-AZ-Pd3">
+            <objects>
+                <viewController id="kYe-oq-NXa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fG4-R8-qpf">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="761"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="t14-xH-eQ9"/>
+                        <color key="backgroundColor" name="Color1"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" id="PbS-7F-Gfg">
+                        <imageReference key="image" image="person.crop.circle.fill" catalog="system" symbolScale="large"/>
+                        <imageReference key="selectedImage" image="person.crop.circle.fill" catalog="system" symbolScale="large"/>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lnK-Qj-v7A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1652" y="1750"/>
+        </scene>
         <!--testing-->
         <scene sceneID="VLY-9K-O5H">
             <objects>
@@ -1414,6 +1433,7 @@
                         <outlet property="tabbar" destination="YG0-ry-b7Z" id="BB0-G2-8p6"/>
                         <segue destination="1kb-Ea-JOf" kind="relationship" relationship="viewControllers" id="wve-ne-FiX"/>
                         <segue destination="7dH-hQ-Yp4" kind="relationship" relationship="viewControllers" id="8PZ-He-A8D"/>
+                        <segue destination="kYe-oq-NXa" kind="relationship" relationship="viewControllers" id="iZ7-9z-a0m"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Row-dJ-nNO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2000,6 +2020,7 @@
         <image name="hand.point.up.left.fill" catalog="system" width="120" height="128"/>
         <image name="pause.fill" catalog="system" width="116" height="128"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
+        <image name="person.crop.circle.fill" catalog="system" width="128" height="121"/>
         <image name="photo.fill" catalog="system" width="128" height="93"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="plus.square.on.square" catalog="system" width="128" height="113"/>
