--- a/gridot/GriDot/Base.lproj/Main.storyboard
+++ b/gridot/GriDot/Base.lproj/Main.storyboard
@@ -1002,6 +1002,40 @@
             </objects>
             <point key="canvasLocation" x="744.61538461538464" y="1756.6350710900474"/>
         </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="i6e-2w-YXf">
+            <objects>
+                <viewController storyboardIdentifier="ProfileViewController" id="h3J-MG-JsE" customClass="ProfileViewController" customModule="GriDot" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XZK-UZ-rlg">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="761"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXs-ql-Ou6">
+                                <rect key="frame" x="92" y="346" width="240" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hla-HG-Pry"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hla-HG-Pry" firstAttribute="bottom" secondItem="ZXs-ql-Ou6" secondAttribute="bottom" constant="287" id="DBT-UW-B3n"/>
+                            <constraint firstItem="hla-HG-Pry" firstAttribute="trailing" secondItem="ZXs-ql-Ou6" secondAttribute="trailing" constant="58" id="G9k-z0-gn2"/>
+                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="top" secondItem="hla-HG-Pry" secondAttribute="top" constant="302" id="V8C-WG-fRO"/>
+                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="leading" secondItem="hla-HG-Pry" secondAttribute="leading" constant="92" id="mE5-wZ-OBO"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" id="aXb-7g-x3K">
+                        <imageReference key="image" image="person.crop.circle.fill" catalog="system" symbolScale="large"/>
+                        <imageReference key="selectedImage" image="person.crop.circle.fill" catalog="system" symbolScale="large"/>
+                    </tabBarItem>
+                    <connections>
+                        <outlet property="loginView" destination="ZXs-ql-Ou6" id="EvY-Mf-27O"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ymh-iC-Igf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1688" y="1757"/>
+        </scene>
         <!--testing-->
         <scene sceneID="VLY-9K-O5H">
             <objects>
@@ -1414,6 +1448,7 @@
                         <outlet property="tabbar" destination="YG0-ry-b7Z" id="BB0-G2-8p6"/>
                         <segue destination="1kb-Ea-JOf" kind="relationship" relationship="viewControllers" id="wve-ne-FiX"/>
                         <segue destination="7dH-hQ-Yp4" kind="relationship" relationship="viewControllers" id="8PZ-He-A8D"/>
+                        <segue destination="h3J-MG-JsE" kind="relationship" relationship="viewControllers" id="8Bp-pL-kTS"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Row-dJ-nNO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2000,6 +2035,7 @@
         <image name="hand.point.up.left.fill" catalog="system" width="120" height="128"/>
         <image name="pause.fill" catalog="system" width="116" height="128"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
+        <image name="person.crop.circle.fill" catalog="system" width="128" height="121"/>
         <image name="photo.fill" catalog="system" width="128" height="93"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="plus.square.on.square" catalog="system" width="128" height="113"/>
