--- a/gridot/GriDot/Base.lproj/Main.storyboard
+++ b/gridot/GriDot/Base.lproj/Main.storyboard
@@ -1002,7 +1002,7 @@
             </objects>
             <point key="canvasLocation" x="744.61538461538464" y="1756.6350710900474"/>
         </scene>
-        <!--Profile View Controller-->
+        <!--Profile-->
         <scene sceneID="i6e-2w-YXf">
             <objects>
                 <viewController storyboardIdentifier="ProfileViewController" id="h3J-MG-JsE" customClass="ProfileViewController" customModule="GriDot" customModuleProvider="target" sceneMemberID="viewController">
@@ -1010,31 +1010,86 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="761"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXs-ql-Ou6">
-                                <rect key="frame" x="75" y="338.66666666666669" width="240" height="128"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0u3-It-l1c">
+                                <rect key="frame" x="145" y="409" width="100" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="iwl-YQ-QIW"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Logout"/>
+                                <connections>
+                                    <action selector="logout:" destination="h3J-MG-JsE" eventType="touchUpInside" id="hhn-BW-UBT"/>
+                                    <segue destination="I3o-ql-EE5" kind="show" id="iuv-4u-AqZ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hla-HG-Pry"/>
                         <color key="backgroundColor" name="Color1"/>
                         <constraints>
-                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="centerX" secondItem="hla-HG-Pry" secondAttribute="centerX" id="8vK-J7-j2J"/>
-                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="width" secondItem="XZK-UZ-rlg" secondAttribute="width" multiplier="0.615385" id="L9O-eG-Myb"/>
-                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="centerY" secondItem="hla-HG-Pry" secondAttribute="centerY" id="W4R-iQ-IT3"/>
-                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="height" secondItem="XZK-UZ-rlg" secondAttribute="height" multiplier="0.1682" id="m7v-fg-uBy"/>
+                            <constraint firstItem="0u3-It-l1c" firstAttribute="centerX" secondItem="hla-HG-Pry" secondAttribute="centerX" id="1uR-Kb-iGc"/>
+                            <constraint firstItem="0u3-It-l1c" firstAttribute="centerY" secondItem="hla-HG-Pry" secondAttribute="centerY" id="gj8-7A-4hV"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" id="aXb-7g-x3K">
                         <imageReference key="image" image="person.crop.circle.fill" catalog="system" symbolScale="large"/>
                         <imageReference key="selectedImage" image="person.crop.circle.fill" catalog="system" symbolScale="large"/>
                     </tabBarItem>
-                    <connections>
-                        <outlet property="loginView" destination="ZXs-ql-Ou6" id="EvY-Mf-27O"/>
-                    </connections>
+                    <navigationItem key="navigationItem" title="Profile" id="02k-4g-1aC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ymh-iC-Igf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1688" y="1757"/>
+            <point key="canvasLocation" x="2492" y="1757"/>
+        </scene>
+        <!--Sign in-->
+        <scene sceneID="Dsk-hz-bYs">
+            <objects>
+                <viewController storyboardIdentifier="SignInViewController" id="I3o-ql-EE5" customClass="SignInViewController" customModule="GriDot" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YCN-Or-dRR">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="761"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXs-ql-Ou6">
+                                <rect key="frame" x="75" y="360.66666666666669" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="wLC-xa-DzO"/>
+                        <color key="backgroundColor" name="Color1"/>
+                        <constraints>
+                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="centerX" secondItem="wLC-xa-DzO" secondAttribute="centerX" id="EYd-Ad-XAL"/>
+                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="width" secondItem="YCN-Or-dRR" secondAttribute="width" multiplier="0.615385" id="gl8-FX-c3h"/>
+                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="height" secondItem="YCN-Or-dRR" secondAttribute="height" multiplier="0.1682" id="lFw-Lf-LqB"/>
+                            <constraint firstItem="ZXs-ql-Ou6" firstAttribute="centerY" secondItem="wLC-xa-DzO" secondAttribute="centerY" id="smK-LB-Z8W"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Sign in" largeTitleDisplayMode="always" id="Zkn-xA-mqd"/>
+                    <connections>
+                        <outlet property="loginView" destination="ZXs-ql-Ou6" id="vTd-ZH-FC4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nud-F2-gTs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3331" y="1757"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="QLm-Pt-gaJ">
+            <objects>
+                <navigationController id="xLY-8g-K58" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" id="aaf-rd-g1Z">
+                        <imageReference key="image" image="person.crop.circle.fill" catalog="system" symbolScale="large"/>
+                        <imageReference key="selectedImage" image="person.crop.circle.fill" catalog="system" symbolScale="large"/>
+                    </tabBarItem>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8Lt-DT-dgI">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="h3J-MG-JsE" kind="relationship" relationship="rootViewController" id="y4J-Pr-nYf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YkP-4F-4rH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1643" y="1757"/>
         </scene>
         <!--testing-->
         <scene sceneID="VLY-9K-O5H">
@@ -1246,7 +1301,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nv7-0Y-msS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2571" y="967"/>
+            <point key="canvasLocation" x="2491" y="967"/>
         </scene>
         <!--gallery-->
         <scene sceneID="CQD-a4-Dc7">
@@ -1448,7 +1503,7 @@
                         <outlet property="tabbar" destination="YG0-ry-b7Z" id="BB0-G2-8p6"/>
                         <segue destination="1kb-Ea-JOf" kind="relationship" relationship="viewControllers" id="wve-ne-FiX"/>
                         <segue destination="7dH-hQ-Yp4" kind="relationship" relationship="viewControllers" id="8PZ-He-A8D"/>
-                        <segue destination="h3J-MG-JsE" kind="relationship" relationship="viewControllers" id="8Bp-pL-kTS"/>
+                        <segue destination="xLY-8g-K58" kind="relationship" relationship="viewControllers" id="Wvb-nb-zt5"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Row-dJ-nNO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
